Fixed admin delete issue, fixed mozilla firefox alignment and deleted some code

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,6 +62,7 @@ footer small {
 
 .listing {
   list-style: none;
+  text-align: center;
   padding-left: 0;
 }
 
@@ -161,7 +162,7 @@ footer small {
   opacity: 0.6;
 }
 
-/* Code from w3schools - Loader animation */
+/* Code from w3schools - Loader animation
 #loader {
   position: absolute;
   left: 50%;
@@ -189,7 +190,7 @@ footer small {
   100% { transform: rotate(360deg); }
 }
 
-/* Add animation to "page content" */
+//Add animation to "page content"
 .animate-bottom {
   position: relative;
   -webkit-animation-name: animatebottom;
@@ -212,3 +213,4 @@ footer small {
   display: none;
   text-align: center;
 }
+*/
